--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <h1>ZonAero Project <span class="gold">Hub</span> (DEMO) </h1>
+    <h1>ZonAero Project <span class="gold">Hub</span></h1>
     <nav>
       <a href="#projects">Projects</a>
       <a href="#about">About</a>
@@ -116,13 +116,12 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: iabqosochqjz@gmail.com</p>
-    <p>Phone: 082-483-1422</p>
-    <p>At school: M.5/2 | number 31</p>
+    <p>. - Email: iabqosochqjz@gmail.com</p>
+    <p>. - Phone: 082-483-1422</p>>
   </section>
 
   <footer>
-    <p>&copy; 2025 ZonAero. All rights reserved. (DEMO)</p>
+    <p>&copy; 2025 ZonAero. All rights reserved.</p>
   </footer>
 </body>
 </html>
